# berlekamp

./: CMakeLists.txt  README.md
berlekamp/: Berlekamp.cpp  Berlekamp.h  Matrix.cpp  Matrix.h  Polynomial.cpp  Polynomial.h
tests/: berlekamp_test.cpp
